<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/black"
    android:gravity="center"
    tools:context=".UserNameDisplay">


    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:fontFamily="sans-serif-condensed-medium"
        android:gravity="center"
        android:text="@string/Welcome"
        android:textSize="32sp"
        android:textColor="@color/white"
        android:textStyle="bold|italic" />

    <TextView
        android:id="@+id/tvUserNameShow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        android:text="TextView"
        android:textColor="@color/grey"
        android:textSize="32sp"
        android:textStyle="bold|italic" />

    <Button
        android:id="@+id/btnMoveToKhaata"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="5dp"
        android:text="@string/Move_to_Khaata"
        android:textSize="16sp" />

    <androidx.cardview.widget.CardView
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        app:cardCornerRadius="20dp"
        app:cardBackgroundColor="#6750a4">

        <Spinner
            android:id="@+id/spinnerCurrency"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:spinnerMode="dropdown"
            android:entries="@array/currency_options"
            android:padding="8dp"
            android:textColor="@color/white"
            android:popupBackground="@color/white" />
    </androidx.cardview.widget.CardView>


    <Button
        android:id="@+id/btnBackUSerNameDisplay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:text="@string/back"
        android:textSize="16sp" />
</LinearLayout>
